Fixed timeline. The On/Off switches are also fixed. It's still terribly slow on iOS

--- a/app/styles/timeline.scss
+++ b/app/styles/timeline.scss
@@ -9,7 +9,7 @@
 	display:inline-block;
 	width:40px;
 	height:40px;
-	background:blue;
+	background:#333;
 	margin:5px;
 	border-radius:50%;
 	cursor:pointer;
@@ -19,91 +19,94 @@
 	box-shadow:0px 0px 0px 4px $timeline-bg;
 	//border:5px solid blue;
 }
-input[type=range]::-ms-tooltip {
-    display: none;
-}
-input[type=range]{
-    -webkit-appearance: none;
-    background: #ddd;
-    padding:0;
-    margin:0;
-    height: 60px;
-    //border: 1px solid transparent;
-}
 
-input[type=range]::-webkit-slider-thumb {
-	-webkit-appearance: none;
-    border: none;
-    height: 60px;
-    width: 5px;
-    border-left: 1px solid #d2204c;
-    border-right: 1px solid #ad1457;
-    background: #d2204c;
-}
-input[type=range]:focus {
-    outline: none;
-}
+.timeline-controller {
+	input[type=range]::-ms-tooltip {
+	    display: none;
+	}
+	input[type=range]{
+	    -webkit-appearance: none;
+	    background: transparent;
+	    padding:0;
+	    margin:0;
+	    height: 60px;
+	    //border: 1px solid transparent;
+	}
 
-input[type=range]::-webkit-slider-runnable-track {
-    height: 60px;
-}
-/*input[type=range]:focus::-webkit-slider-runnable-track {
-    background: #ccc;
+	input[type=range]::-webkit-slider-thumb {
+		-webkit-appearance: none;
+	    border: none;
+	    height: 60px;
+	    width: 5px;
+	    border-left: 1px solid #d2204c;
+	    border-right: 1px solid #ad1457;
+	    background: #d2204c;
+	}
+	input[type=range]:focus {
+	    outline: none;
+	}
+
+	input[type=range]::-webkit-slider-runnable-track {
+	    height: 60px;
+	}
+	/*input[type=range]:focus::-webkit-slider-runnable-track {
+	    background: #ccc;
+	}*/
+	input[type=range]::-ms-track {
+	    height: 60px;
+	    background: transparent;
+	    border: none;
+
+	    /* remove default tick marks */
+	    color: transparent;
+	}
+	input[type=range]::-ms-fill-lower {
+	    outline: none;
+	    background: #777;
+	}
+	input[type=range]::-ms-thumb {
+	    border: none;
+	    height: 60px;
+	    width: 3px;
+	    border-left: 1px solid #d2204c;
+	    border-right: 1px solid #ad1457;
+	    background: #d2204c;
+	}
+	/*input[type=range]:focus::-ms-track {
+	    background: #ccc;
+	}
+	input[type=range]:focus::-ms-fill-lower {
+	    background: #888;
+	}*/
+	input[type=range]::-moz-range-track {
+	    height: 60px;
+	    background: transparent;
+	    border: none;
+	}
+
+	input[type=range]::-moz-range-thumb {
+	    border: none;
+	    height: 60px;
+	    width: 3px;
+	    border-left: 1px solid #d2204c;
+	    border-right: 1px solid #ad1457;
+	    background: #d2204c;
+	    border-radius:1px;
+	}
+
+	/*hide the outline behind the border*/
+	/*input[type=range]:-moz-focusring{
+	    outline: 1px solid transparent;
+	    outline-offset: -1px;
+	}*/
+	input[type=range]::-moz-focus-outer {
+	  border: 0;
+	}
+
+	/*input[type=range]:focus::-moz-range-track {
+	    background: #ccc;
 }*/
-input[type=range]::-ms-track {
-    height: 60px;
-    background: #ddd;
-    border: none;
-
-    /* remove default tick marks */
-    color: transparent;
 }
-input[type=range]::-ms-fill-lower {
-    outline: none;
-    background: #777;
-}
-input[type=range]::-ms-thumb {
-    border: none;
-    height: 60px;
-    width: 3px;
-    border-left: 1px solid #d2204c;
-    border-right: 1px solid #ad1457;
-    background: #d2204c;
-}
-/*input[type=range]:focus::-ms-track {
-    background: #ccc;
-}
-input[type=range]:focus::-ms-fill-lower {
-    background: #888;
-}*/
-input[type=range]::-moz-range-track {
-    height: 60px;
-    background: transparent;
-    border: none;
-}
-
-input[type=range]::-moz-range-thumb {
-    border: none;
-    height: 60px;
-    width: 3px;
-    border-left: 1px solid #d2204c;
-    border-right: 1px solid #ad1457;
-    background: #d2204c;
-    border-radius:1px;
-}
-
-/*hide the outline behind the border*/
-/*input[type=range]:-moz-focusring{
-    outline: 1px solid transparent;
-    outline-offset: -1px;
-}*/
-input[type=range]::-moz-focus-outer {
-  border: 0;
-}
-
-/*input[type=range]:focus::-moz-range-track {
-    background: #ccc;
-}*/
 
 
 .timeline-controller {
@@ -111,7 +114,7 @@ input[type=range]::-moz-focus-outer {
 		text-transform: uppercase;
 	}	
 
-	.container-fluid {
+	.container-timeline {
 		display: flex;
 		flex-direction: column;
 		position: absolute;
@@ -122,7 +125,7 @@ input[type=range]::-moz-focus-outer {
 
 		h3 {
 			margin-top:2px;
-			margin-bottom:4px;
+			margin-bottom:10px;
 		}
 
 		& > h3, & > .row {
@@ -132,7 +135,24 @@ input[type=range]::-moz-focus-outer {
 		.timeline-data-block-area {
 			flex-shrink: 1;
 			overflow-x:auto;
+			-webkit-overflow-scrolling: touch;
 			min-height:128px;
+
+			& > div {
+				margin-bottom:10px;
+			}
 		}
+	}
+}
+
+body.touch.timeline-controller {
+	input[type=range]::-webkit-slider-thumb {
+		width:20px;
+	}
+	input[type=range]::-ms-thumb {
+		width:20px;
+	}
+	input[type=range]::-moz-range-thumb {
+		width:20px;
 	}
 }
